--- a/.classpath
+++ b/.classpath
@@ -1,63 +1,30 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.as|**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
-	<classpathentry excluding="**/*.java" kind="src" output="target/test-classes" path="src/test/resources"/>
-	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
-	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
-	<classpathentry kind="var" path="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1.jar" sourcepath="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/net/java/dev/jna/com.springsource.com.sun.jna/3.2.3/com.springsource.com.sun.jna-3.2.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/google/javaparser/com.springsource.japa.parser/1.0.7/com.springsource.japa.parser-1.0.7.jar"/>
-	<classpathentry kind="var" path="M2_REPO/net/sourceforge/jline/com.springsource.jline/0.9.94.S2-A/com.springsource.jline-0.9.94.S2-A.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/fusesource/jansi/com.springsource.org.fusesource.jansi/1.1.0/com.springsource.org.fusesource.jansi-1.1.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jvnet/inflector/com.springsource.org.jvnet.inflector/0.7.0/com.springsource.org.jvnet.inflector-0.7.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/com.springsource.slf4j.api/1.5.6/com.springsource.slf4j.api-1.5.6.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/com.springsource.slf4j.juli/1.5.6/com.springsource.slf4j.juli-1.5.6.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/com.springsource.slf4j.org.apache.commons.logging/1.5.6/com.springsource.slf4j.org.apache.commons.logging-1.5.6.jar"/>
-	<classpathentry kind="var" path="M2_REPO/junit/junit/4.7/junit-4.7.jar" sourcepath="M2_REPO/junit/junit/4.7/junit-4.7-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/uk/co/badgersinfoil/metaas/metaas/0.8/metaas-0.8.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.asm/3.0.0.RELEASE/org.springframework.asm-3.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.beans/3.0.0.RELEASE/org.springframework.beans-3.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.context/3.0.0.RELEASE/org.springframework.context-3.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.core/3.0.0.RELEASE/org.springframework.core-3.0.0.RELEASE.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/springframework/org.springframework.expression/3.0.0.RELEASE/org.springframework.expression-3.0.0.RELEASE.jar"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.backup"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.beaninfo"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.configurable"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.dod"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.email"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.entity"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.finder"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.javabean"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.jms"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.jpa"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.logging"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.maven"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.plural"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.property.editor"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.propfiles"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.security"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.test"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.tostring"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.web.controller"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.web.flow"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.web.menu"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.web.mvc.jsp"/>
-	<classpathentry kind="src" path="/org.springframework.roo.addon.web.selenium"/>
-	<classpathentry kind="src" path="/org.springframework.roo.bootstrap"/>
-	<classpathentry kind="src" path="/org.springframework.roo.classpath"/>
-	<classpathentry kind="src" path="/org.springframework.roo.classpath.javaparser"/>
-	<classpathentry kind="src" path="/org.springframework.roo.file.monitor"/>
-	<classpathentry kind="src" path="/org.springframework.roo.file.monitor.polling"/>
-	<classpathentry kind="src" path="/org.springframework.roo.file.undo"/>
-	<classpathentry kind="src" path="/org.springframework.roo.metadata"/>
-	<classpathentry kind="src" path="/org.springframework.roo.model"/>
-	<classpathentry kind="src" path="/org.springframework.roo.process.manager"/>
-	<classpathentry kind="src" path="/org.springframework.roo.project"/>
-	<classpathentry kind="src" path="/org.springframework.roo.shell"/>
-	<classpathentry kind="src" path="/org.springframework.roo.shell.jline"/>
-	<classpathentry kind="src" path="/org.springframework.roo.support"/>
-	<classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.1-b1/stringtemplate-3.1-b1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
+  <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="var" path="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1.jar" sourcepath="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.7/junit-4.7.jar" sourcepath="M2_REPO/junit/junit/4.7/junit-4.7-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/uk/co/badgersinfoil/metaas/metaas/0.8/metaas-0.8.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/felix/org.apache.felix.scr.annotations/1.2.0/org.apache.felix.scr.annotations-1.2.0.jar" sourcepath="M2_REPO/org/apache/felix/org.apache.felix.scr.annotations/1.2.0/org.apache.felix.scr.annotations-1.2.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/osgi/org.osgi.compendium/4.1.0/org.osgi.compendium-4.1.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/osgi/org.osgi.core/4.1.0/org.osgi.core-4.1.0.jar"/>
+  <classpathentry kind="src" path="/org.springframework.roo.addon.beaninfo"/>
+  <classpathentry kind="src" path="/org.springframework.roo.addon.entity"/>
+  <classpathentry kind="src" path="/org.springframework.roo.addon.finder"/>
+  <classpathentry kind="src" path="/org.springframework.roo.addon.web.controller"/>
+  <classpathentry kind="src" path="/org.springframework.roo.addon.web.mvc.jsp"/>
+  <classpathentry kind="src" path="/org.springframework.roo.classpath"/>
+  <classpathentry kind="src" path="/org.springframework.roo.file.monitor"/>
+  <classpathentry kind="src" path="/org.springframework.roo.file.undo"/>
+  <classpathentry kind="src" path="/org.springframework.roo.metadata"/>
+  <classpathentry kind="src" path="/org.springframework.roo.model"/>
+  <classpathentry kind="src" path="/org.springframework.roo.process.manager"/>
+  <classpathentry kind="src" path="/org.springframework.roo.project"/>
+  <classpathentry kind="src" path="/org.springframework.roo.shell"/>
+  <classpathentry kind="src" path="/org.springframework.roo.support"/>
+  <classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.1-b1/stringtemplate-3.1-b1.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 </classpath>
