--- a/org.springframework.flex.roo.addon/pom.xml
+++ b/org.springframework.flex.roo.addon/pom.xml
@@ -5,7 +5,6 @@
 	<groupId>org.springframework.flex.roo.addon</groupId>
 	<artifactId>org.springframework.flex.roo.addon</artifactId>
 	<packaging>bundle</packaging>
-	<version>0.1.0-SNAPSHOT</version>
 	<name>org.springframework.flex.roo.addon</name>
 
 	<repositories>
@@ -200,6 +199,7 @@
 		</dependency>
 	</dependencies>
 
+	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<build>
 		<plugins>
 			<!--
