--- a/org.springframework.flex.roo.annotations/pom.xml
+++ b/org.springframework.flex.roo.annotations/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>org.springframework.flex.roo.annotations</artifactId>
 	<packaging>jar</packaging>
 	<name>Spring Flex Roo Addon Annotations</name>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>1.0.0.BUILD-SNAPSHOT</version>
 
 	<build>
 		<plugins>
