--- a/org.springframework.flex.roo.addon/.settings/org.eclipse.jdt.core.prefs
+++ b/org.springframework.flex.roo.addon/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Sat Sep 04 16:46:53 PDT 2010
+#Fri Mar 04 15:41:49 PST 2011
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.source=1.5
